--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <h1>Hystrua ruins</h1>
         <P>Welcome adventurer!</P>
         <img src="/tamer classic.gif" alt="tamer">
-        <button>History of hystria</button>
-        
+        <button>Hystria deekia</button>
+
 
     </div>
     
