--- a/index.html
+++ b/index.html
@@ -16,10 +16,11 @@
     <div class="container">
 
 
-        <h1>Hystrua ruins</h1>
+        <h1>Hystria ruins</h1>
         <P>Welcome adventurer!</P>
         <img src="/tamer classic.gif" alt="tamer">
-        <button>Hystria deekia</button>
+        <button>Hystria dekia</button>
+        
 
 
     </div>
