Criado e alinhado o button

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <P>Welcome adventurer!</P>
         <img src="/tamer classic.gif" alt="tamer">
         <button>Hystria dekia</button>
+        <input type="text">
         
-
 
     </div>
     
