--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <h1>Hystria ruins</h1>
         <P>Welcome adventurer!</P>
         <img src="/tamer classic.gif" alt="tamer">
-        <p class="para">Digite seu nome aventureiro:<input type="text"></p>
+        <p class="para">Enter your adventurer name:<input type="text"></p>
         <button>Hystria dekia</button>
         
 
