--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
         <P>Welcome adventurer!</P>
         <img src="/tamer classic.gif" alt="tamer">
         <p class="para">Enter your adventurer name:<input type="text"></p>
-        <button>Hystria dekia</button>
+        <button id="botao">Hystria dekia</button>
+        <button id="botao-alterar-tema"><img src="/black-hole.svg" alt="hole" class="botao-alterar-tema"></button>
         
 
     </div>
