--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <button id="botao">Hystria</button>
         <button id="botao-alterar-tema"><img src="/black-hole.svg" alt="logo" class="botao-alterar-tema"></button>
     </div>
+    <div class="container2"><h3></h3></div>
     <script src="script.js"></script>
 </body>
 </html>
